--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<!-- logo -->
-				<a class="navbar-brand" href="#">Phon MingDe</a>
+				<a class="navbar-brand" href="#">Fong JunDe</a>
 			</div>
 
 			<!-- Collect the nav links, and other content for toggling -->
